--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,5 @@
-# Python
-__pycache__/
-*.py[cod]
-*.pyo
-*.pyd
-.Python
-env/
 venv/
-ENV/
-env.bak/
-venv.bak/
-*.egg-info/
-*.egg
-dist/
-build/
-*.whl
+*.ini
 
 # PyCharm
 .idea/
